# moonpool

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  book.toml  flake.nix  release-plz.toml  rust-toolchain.toml
moonpool/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
moonpool-assertions/: CHANGELOG.md  Cargo.toml
moonpool-assertions/src/: buckets.rs  hooks.rs  lib.rs  region.rs  slots.rs
moonpool-core/: CHANGELOG.md  Cargo.toml  README.md
moonpool-core/src/: codec.rs  error.rs  lib.rs  network.rs  node_address.rs  providers.rs  random.rs  select.rs  select_support.rs  storage.rs  task.rs  time.rs  types.rs  well_known.rs
moonpool-core/tests/: select.rs  select_passthrough.rs
moonpool-explorer/: CHANGELOG.md  Cargo.toml  README.md
moonpool-explorer/src/: assertion_slots.rs  context.rs  coverage.rs  each_buckets.rs  energy.rs  fork_loop.rs  hash.rs  lib.rs  replay.rs  sancov.rs  shared_mem.rs  shared_stats.rs  slot_table.rs  split_loop.rs
moonpool-explorer/src/simulations/: adaptive.rs  mod.rs
moonpool-explorer/tests/: adaptive_scenarios.rs
moonpool-foundation/: CHANGELOG.md  CHAOS_CATALOG.md  CLAUDE.md  Cargo.toml  README.md
moonpool-foundation/src/: assertions.rs  buggify.rs  events.rs  fault_injection.rs  invariants.rs  lib.rs  network_state.rs  operation_gen.rs  prelude.rs  rng.rs  runner.rs  sim.rs  state_registry.rs  tokio_runner.rs
moonpool-foundation/src/chaos/: assertions.rs  invariants.rs
moonpool-foundation/src/messaging/: mod.rs  types.rs  well_known.rs  wire.rs
moonpool-foundation/src/network/: config.rs  mod.rs
moonpool-foundation/src/random/: mod.rs  sim.rs
moonpool-foundation/src/runner/: builder.rs  mod.rs  orchestrator.rs  tokio.rs  topology.rs
moonpool-foundation/src/sim/: events.rs  mod.rs  state.rs  wakers.rs  world.rs
moonpool-foundation/src/task/: mod.rs
moonpool-foundation/src/time/: mod.rs  provider.rs
moonpool-foundation/tests/: assertion_integration_tests.rs  autonomous_ping_pong.rs  buggify_integration.rs  chaos_bit_flip.rs  chaos_connect_failure.rs  chaos_random_close.rs  clock_drift.rs  configurable_latency.rs  determinism_tests.rs  network_traits.rs  sim.rs  simulation.rs  simulation_integration.rs  sleep_tests.rs  thread_local_rng_tests.rs  transport_e2e.rs
moonpool-foundation/tests/chaos/: assertions.rs  buggified_delay.rs  connect_failure.rs  random_close.rs
moonpool-foundation/tests/e2e/: invariants.rs  mod.rs  operations.rs  tests.rs  workloads.rs
moonpool-foundation/tests/network/: partition.rs
moonpool-paxos/: Cargo.toml
moonpool-paxos/src/: acceptor.rs  catchup.rs  client.rs  heartbeat.rs  leader.rs  lease.rs  lib.rs  master.rs  reconfig.rs  storage.rs  types.rs
moonpool-paxos/tests/: simulation_tests.rs
moonpool-paxos/tests/simulation/: invariants.rs  mod.rs  test_scenarios.rs  workloads.rs
moonpool-sim/: CHANGELOG.md  Cargo.toml  README.md
moonpool-sim-examples/: CHANGELOG.md  Cargo.toml
moonpool-sim-examples/src/: axum_web.rs  dungeon.rs  fdb.rs  lib.rs  maze.rs  topology.rs
moonpool-sim/examples/: hyper_http.rs
moonpool-sim/src/: lib.rs
moonpool-sim/src/chaos/: assertions.rs  buggify.rs  exploration_glue.rs  fault_events.rs  invariant_trait.rs  mod.rs  state_handle.rs  state_registry.rs
moonpool-sim/src/executor/: join.rs  mod.rs
moonpool-sim/src/network/: config.rs  mod.rs
moonpool-sim/src/observability/: emit.rs  event.rs  fmt.rs  init.rs  invariant.rs  layer.rs  mod.rs  query.rs
moonpool-sim/src/providers/: mod.rs  random.rs  sim_providers.rs  task.rs  time.rs
moonpool-sim/src/runner/: builder.rs  context.rs  display.rs  fault_injector.rs  fmt.rs  locality.rs  mod.rs  orchestrator.rs  process.rs  report.rs  tags.rs  tokio.rs  topology.rs  wall_clock.rs  workload.rs
moonpool-sim/src/sim/: chaos_clog.rs  chaos_partition.rs  connections.rs  events.rs  mod.rs  rng.rs  sleep.rs  state.rs  storage_ops.rs  wakers.rs  world.rs
moonpool-sim/src/simulations/: dungeon.rs  maze.rs  mod.rs
moonpool-sim/src/storage/: config.rs  error.rs  events.rs  file.rs  futures.rs  memory.rs  mod.rs  provider.rs
moonpool-sim/tests/: chaos.rs  conformance.rs  coverage_plateau.rs  determinism.rs  executor.rs  exploration.rs  hyper_http.rs  leader_election.rs  network.rs  reboot.rs  run_time_budget.rs  storage.rs  swarm_op_alphabet.rs  topology.rs
moonpool-sim/tests/chaos/: assertions.rs  bit_flip.rs  (+7 more)
moonpool-simulation/: Cargo.toml
moonpool-simulation/src/: assertions.rs  buggify.rs  error.rs  events.rs  lib.rs  network_state.rs  report.rs  rng.rs  runner.rs  sim.rs  sleep.rs  tokio_runner.rs
moonpool-simulation/tests/: assertion_integration_tests.rs  buggify_integration.rs  configurable_latency.rs  determinism_tests.rs  network_traits.rs  peer_reconnection_tests.rs  ping_pong_tests.rs  simulation.rs  simulation_integration.rs  sleep_tests.rs  thread_local_rng_tests.rs  time_provider_imports_test.rs  transport_e2e.rs
moonpool-traits/: Cargo.toml
moonpool-traits/src/: codec.rs  lib.rs
moonpool-transport/: CHANGELOG.md  Cargo.toml  README.md
moonpool-transport-derive/: CHANGELOG.md  Cargo.toml  README.md
moonpool-transport-derive/src/: lib.rs
moonpool-transport-sim/: Cargo.toml
moonpool-transport-sim/src/: hash.rs  invariants.rs  lib.rs  process.rs  report.rs  service.rs  workload.rs
moonpool-transport/examples/: calculator.rs  dynamic_endpoint.rs  fan_out_all_demo.rs  fan_out_all_partial_demo.rs  fan_out_quorum_demo.rs  fan_out_race_demo.rs  load_balanced_reads.rs  ping_pong.rs  well_known_endpoint.rs
moonpool-transport/src/: error.rs  lib.rs  macros.rs
moonpool-transport/tests/: e2e.rs  messaging_simulation.rs  ping_monitor.rs  rpc_integration.rs
moonpool-wasm-demo/: .gitignore  CLAUDE.md  Cargo.toml  README.md
moonpool-wasm-demo/src/: lib.rs  main.rs
moonpool-wasm-demo/web/: index.html
moonpool/examples/: banking.rs  calculator.rs  ping_pong.rs  retrying_worker.rs
moonpool/src/: error.rs  lib.rs  prelude.rs
moonpool/tests/: actor_simulation.rs  actor_state_simulation.rs  lib.rs  metastable.rs  rpc_integration.rs  simulation.rs
(+516 files in other folders)
