[workspace]

members = ["moonpool", "moonpool-assertions", "moonpool-core", "moonpool-explorer", "moonpool-sim", "moonpool-sim-examples", "moonpool-transport", "moonpool-transport-derive", "moonpool-transport-sim", "xtask"]
resolver = "2"

[workspace.package]
version = "0.7.0"
repository = "https://github.com/PierreZ/moonpool"
license = "Apache-2.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
description = "Deterministic simulation testing for distributed systems in Rust"
documentation = "https://docs.rs/moonpool"
homepage = "https://pierrez.github.io/moonpool/"
keywords = ["simulation", "testing", "distributed-systems", "deterministic", "chaos"]
categories = ["development-tools::testing"]
edition = "2024"

[workspace.lints.rust]
async_fn_in_trait = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
