[package]
name = "moonpool-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core abstractions for the moonpool simulation framework"
documentation = "https://docs.rs/moonpool-core"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tokio_unstable"]
rustc-args = ["--cfg", "tokio_unstable"]

[dependencies]
async-trait = "0.1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "net", "rt", "time", "tracing"] }
tracing = "0.1"

[dev-dependencies]
