[package]
name = "moonpool-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core abstractions for the moonpool simulation framework"
documentation = "https://docs.rs/moonpool-core"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tokio_unstable"]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
default = ["tokio-providers"]
tokio-providers = ["dep:tokio", "dep:tokio-util", "rand/thread_rng"]

[dependencies]
futures = "0.3"
rand = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-util", "net", "rt", "time", "tracing"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
tracing = "0.1"

[dev-dependencies]

[lints]
workspace = true
