[package]
name = "moonpool-explorer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fork-based multiverse exploration for moonpool simulation testing"
documentation = "https://docs.rs/moonpool-explorer"

[[bin]]
name = "sim-adaptive-explore"
path = "src/bin/sim/adaptive_explore.rs"

[dependencies]
libc = "0.2"
