[package]
name = "moonpool-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Simulation engine for the moonpool framework"
documentation = "https://docs.rs/moonpool-sim"

[dependencies]
moonpool-core = { path = "../moonpool-core" }

async-trait = "0.1"
crc32c = "0.6"
futures = "0.3"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
