[package]
name = "moonpool-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Simulation engine for the moonpool framework"
documentation = "https://docs.rs/moonpool-sim"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tokio_unstable"]
rustc-args = ["--cfg", "tokio_unstable"]

[dependencies]
moonpool-core = { path = "../moonpool-core", version = "0.3.0" }
moonpool-explorer = { path = "../moonpool-explorer", version = "0.3.0" }

async-trait = "0.1"
crc32c = "0.6"
futures = "0.3"
rand = "0.10"
rand_chacha = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
moonpool-transport = { path = "../moonpool-transport", version = "0.3.0" }
tempfile = "3"
tracing-subscriber = "0.3"
