[package]
name = "moonpool-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Simulation engine for the moonpool framework"
documentation = "https://docs.rs/moonpool-sim"
readme = "README.md"

[features]
# tokio-providers re-exports core's production provider bundle (TokioProviders,
# TokioNetworkProvider, TokioTaskProvider, TokioTimeProvider) for examples/tests
# that drive the same code under prod + sim. Default-on; disable for a wasm-able
# sim (`--no-default-features`), which runs tasks on the moonpool executor.
default = ["tokio-providers", "exploration"]
tokio-providers = ["moonpool-core/tokio-providers"]
# Fork-based multiverse exploration (libc/mmap — never wasm). When off, assertion
# accounting still works via the in-process heap table from moonpool-assertions, so
# UntilAllSometimesReached / CoveragePlateau / contract validation are unaffected.
exploration = ["dep:moonpool-explorer"]

[dependencies]
# SimProviders bundles SimTaskProvider on the moonpool deterministic executor,
# so no core tokio feature is mandatory; net/fs/time (and TokioTaskProvider for
# conformance testing) come in only via the tokio-providers feature.
# deterministic-select flips moonpool_core::select! to the seeded-offset expansion
# for every crate in a sim-linking build graph (cargo feature unification).
moonpool-core = { path = "../moonpool-core", version = "0.8.0", default-features = false, features = ["deterministic-select"] }
# Assertion accounting (pure std, wasm-able) — always present. The fork-based
# exploration backend below is optional and layers on top of it.
moonpool-assertions = { path = "../moonpool-assertions", version = "0.8.0" }
moonpool-explorer = { path = "../moonpool-explorer", version = "0.8.0", optional = true }

# Runnable/Task split, waker wiring, join + cancellation for the deterministic
# executor (same backbone as madsim); no_std-able, no runtime of its own.
async-task = "4.7"
async-trait = "0.1"
crc32c = "0.6"
futures = "0.3"
# Seeded ChaCha8 only — no OS entropy, so no getrandom (keeps the sim wasm-clean).
rand = { version = "0.10", default-features = false }
rand_chacha = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
# No tokio in library code: tasks run on the moonpool deterministic executor
# (async-task) and select! comes from moonpool-core. Tests pull tokio "full"
# via dev-dependencies for #[tokio::test]-style SimWorld unit tests.
# tokio-util: CancellationToken (shutdown signalling) + compat (io bridging).
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["registry"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tempfile = "3"

[lints]
workspace = true
