[package]
name = "moonpool-simulation"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
