[package]
name = "moonpool-simulation"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
