[package]
name = "moonpool-traits"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Traits for the moonpool simulation framework"
documentation = "https://docs.rs/moonpool-traits"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
