[package]
name = "moonpool-transport-sim"
version.workspace = true
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Simulation workloads for moonpool-transport"

[dependencies]
moonpool-sim = { path = "../moonpool-sim", version = "0.7.0" }
moonpool-transport = { path = "../moonpool-transport", version = "0.7.0" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "sim-transport"
path = "src/bin/sim/transport.rs"

[lints]
workspace = true
