[package]
name = "moonpool-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FDB-style transport layer for the moonpool framework"
documentation = "https://docs.rs/moonpool-transport"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tokio_unstable"]
rustc-args = ["--cfg", "tokio_unstable"]

[dependencies]
moonpool-core = { path = "../moonpool-core", version = "0.6.0" }
moonpool-sim = { path = "../moonpool-sim", version = "0.6.0" }
moonpool-transport-derive = { path = "../moonpool-transport-derive", version = "0.6.0" }

async-trait = "0.1"
crc32c = "0.6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "load_balanced_reads"
path = "examples/load_balanced_reads.rs"

[[example]]
name = "fan_out_all_demo"
path = "examples/fan_out_all_demo.rs"

[[example]]
name = "fan_out_quorum_demo"
path = "examples/fan_out_quorum_demo.rs"

[[example]]
name = "fan_out_race_demo"
path = "examples/fan_out_race_demo.rs"

[[example]]
name = "fan_out_all_partial_demo"
path = "examples/fan_out_all_partial_demo.rs"

