[package]
name = "moonpool-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FDB-style transport layer for the moonpool framework"
documentation = "https://docs.rs/moonpool-transport"
readme = "README.md"

[features]
# Production convenience: the TokioTransport alias + NetTransportBuilder::tokio()
# shortcut, which need core's TokioProviders. Default-on so examples/tests build;
# a generic consumer that brings its own Providers can use default-features=false.
default = ["tokio"]
tokio = ["moonpool-core/tokio-providers"]

[dependencies]
# Transport is generic over `P: Providers`; it doesn't need core's production
# providers unless the `tokio` feature is on (TokioTransport / Builder::tokio()).
# "select" provides moonpool_core::select! (tokio passthrough here; sim-linking
# build graphs flip it to the deterministic combinator via feature unification).
moonpool-core = { path = "../moonpool-core", version = "0.8.0", default-features = false, features = ["select"] }
moonpool-transport-derive = { path = "../moonpool-transport-derive", version = "0.8.0" }

async-trait = "0.1"
crc32c = "0.6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
# Library code only uses tokio::sync (Notify/mpsc); select! comes from
# moonpool-core and pin! from std. spawn/runtime/time live in #[cfg(test)] mods
# and pull "full" via dev-dependencies.
tokio = { version = "1", features = ["sync"] }
# CancellationToken for shutdown signalling (deterministic FIFO wake order).
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "tracing"] }

[[example]]
name = "well_known_endpoint"
path = "examples/well_known_endpoint.rs"

[[example]]
name = "dynamic_endpoint"
path = "examples/dynamic_endpoint.rs"



[lints]
workspace = true
