[package]
name = "moonpool"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tokio_unstable"]
rustc-args = ["--cfg", "tokio_unstable"]

[dependencies]
moonpool-core = { path = "../moonpool-core", version = "0.3.0" }
moonpool-sim = { path = "../moonpool-sim", version = "0.3.0" }
moonpool-transport = { path = "../moonpool-transport", version = "0.3.0" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[[example]]
name = "banking"
path = "examples/banking.rs"
