[package]
name = "moonpool"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"

[features]
# Default = the full framework (what the crate's audience uses today). Lean
# production builds opt out of sim/explorer entirely:
#   moonpool = { version = "0.8", default-features = false, features = ["tokio", "transport"] }
default = ["sim", "tokio", "transport"]
sim = ["dep:moonpool-sim"]
transport = ["dep:moonpool-transport"]
# Production providers (TokioProviders) on core, the transport tokio shortcut,
# and moonpool::select! (core's tokio passthrough) so the documented lean
# config `default-features = false, features = ["tokio"]` has the macro too.
tokio = ["moonpool-core/tokio-providers", "moonpool-core/select", "moonpool-transport?/tokio"]

[dependencies]
moonpool-core = { path = "../moonpool-core", version = "0.7.0", default-features = false }
moonpool-sim = { path = "../moonpool-sim", version = "0.7.0", optional = true }
moonpool-transport = { path = "../moonpool-transport", version = "0.7.0", optional = true }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time"] }

# Production-usage example, also driven through the simulator by its #[test].
[[example]]
name = "retrying_worker"
test = true

[lints]
workspace = true
